API now supports storing level 4 air con assessors
