# lib/boundary/assessor_request.rb
@@ -10,7 +10,8 @@ module Boundary
                 :telephone_number,
                 :search_results_comparison_postcode,
                 :domestic_rd_sap_qualification,
-                :non_domestic_sp3_qualification
+                :non_domestic_sp3_qualification,
+                :non_domestic_cc4_qualification
 
     def initialize(body, scheme_assessor_id, registered_by_id)
       @scheme_assessor_id = scheme_assessor_id
@@ -28,6 +29,8 @@ module Boundary
         body.dig(:qualifications, :domestic_rd_sap)
       @non_domestic_sp3_qualification =
         body.dig(:qualifications, :non_domestic_sp3)
+      @non_domestic_cc4_qualification =
+        body.dig(:qualifications, :non_domestic_cc4)
     end
   end
 end
