# lib/controller/assessor_controller.rb
@@ -20,7 +20,8 @@ module Controller
           type: 'object',
           properties: {
             domesticRdSap: { type: 'string', enum: %w[ACTIVE INACTIVE] },
-            nonDomesticSp3: { type: 'string', enum: %w[ACTIVE INACTIVE] }
+            nonDomesticSp3: { type: 'string', enum: %w[ACTIVE INACTIVE] },
+            nonDomesticCc4: { type: 'string', enum: %w[ACTIVE INACTIVE] }
           }
         }
       }
